<resources>
    <string name="app_name">Dots and Boxes</string>
    <string name="get_started">Get Started!</string>
    <string name="welcome">Welcome to Dots &amp; Boxes</string>
    <string name="lets_play">Let\'s Play!</string>
    <string name="new_user">Looks like you\'re new here. What\'s your name?</string>
    <string name="resume">Resume Saved Game</string>
    <string name="new_game">Start New Game</string>
    <string name="how_to">How to play</string>
    <string name="play_person">PLAYER vs PLAYER</string>
    <string name="play_computer">PLAYER vs COMPUTER</string>
    <string name="play_again">Play again</string>
    <string name="dots_boxes">dots and boxes</string>
    <string name="play_options">Start a Game:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="board_size">Board Size</string>
    <string name="vertices">Vertices</string>
    <string name="player_color">Player Color</string>
    <string name="color_for_player">Color for Player</string>
    <string name="settings_button">settings button</string>
    <string name="help_button">help button</string>
    <string name="board_warning">Changing the board size will result in any game progress being lost.\nDo you want to continue?</string>
    <string name="new_user_name_input">My name is …</string>
    <string name="rules_1">Grab a friend if you\'re not playing the computer. Take turns creating lines by dragging your finger from one dot to another.</string>
    <string name="rules_2">Complete a box by closing its fourth wall.</string>
    <string name="rules_3">You take another turn after completing a box.</string>
    <string name="help_goal">Player with most boxes at the end of the game wins.</string>
    <string name="quit_game">Quit Game</string>
    <!-- Accessibility Strings -->
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="btn_size_four">4 by 4</string>
    <string name="btn_size_five">5 by 5</string>
    <string name="btn_size_six">6 by 6</string>
    <string name="btn_vert_dot">Dot</string>
    <string name="btn_vert_triangle">Triangle</string>
    <string name="btn_vert_star">Star</string>
    <string name="btn_vert_sun">Sun</string>
    <string name="btn_vert_moon">Moon</string>
    <string name="btn_vert_cloud">Cloud</string>
    <string name="av_bangs">Boy with bangs</string>
    <string name="av_curly">Boy with curly hair</string>
    <string name="av_buzz">Boy with buzz cut</string>
    <string name="av_flower">Girl with two top buns and a flower</string>
    <string name="av_brunette">Girl with one top bun</string>
    <string name="av_neon">Girl with neon two low buns</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="resume_game">resume current game</string>
    <string name="reset_game">reset</string>
    <string name="exit_game">exit</string>
    <string name="_4_x_4">4 x 4</string>
    <string name="_5_x_5">5 x 5</string>
    <string name="_6_x_6">6 x 6</string>
</resources>