<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <TextView
            android:id="@+id/tvSettingsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:text="Personalize Your Game!"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/tvBoardSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Board Size -->
        <TextView
            android:id="@+id/tvBoardSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_size"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/boardSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSettingsHeader" />

        <LinearLayout
            android:id="@+id/boardSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/settings_btn_bg"
            android:gravity="center_horizontal"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tvVertices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBoardSize">

            <RadioGroup
                android:id="@+id/radioGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation='horizontal'>

                <RadioButton
                    android:id="@+id/rbGrid4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_selector"
                    android:button="@null"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:gravity="center"
                    android:text="4 x 4"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbGrid5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_selector"
                    android:button="@null"
                    android:buttonTint="@color/white"
                    android:gravity="center"
                    android:text="5 x 5"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbGrid6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_selector"
                    android:button="@null"
                    android:buttonTint="@color/white"
                    android:gravity="center"
                    android:text="6 x 6"
                    android:textColor="@color/white" />
            </RadioGroup>
        </LinearLayout>

        <!-- Vertices -->
        <TextView
            android:id="@+id/tvVertices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertices"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/vertices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boardSize" />

        <LinearLayout
            android:id="@+id/vertices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/settings_btn_bg"
            android:gravity="center_horizontal"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tvPlayerColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVertices">

            <RadioGroup
                android:id="@+id/radioVertices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation='horizontal'>

                <RadioButton
                    android:id="@+id/rbDot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_selector"
                    android:button="@null"
                    android:checked="true"
                    android:drawableStart="@drawable/ic_circle"
                    android:gravity="center"
                    android:paddingLeft="30dp" />

                <RadioButton
                    android:id="@+id/rbTriangle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_selector"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_triangle"
                    android:gravity="center"
                    android:paddingLeft="30dp" />

                <RadioButton
                    android:id="@+id/rbStar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_selector"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_star"
                    android:gravity="center"
                    android:paddingLeft="30dp" />
            </RadioGroup>
        </LinearLayout>

        <!-- Player Color -->
        <TextView
            android:id="@+id/tvPlayerColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/radioPlayerColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vertices" />

        <LinearLayout
            android:id="@+id/radioPlayerColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/settings_btn_bg"
            android:gravity="center_horizontal"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerColor">

            <RadioGroup
                android:id="@+id/rbColorRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation='horizontal'>

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_color_rb_selector"
                    android:button="@null"
                    android:checked="true">

                </RadioButton>


                <RadioButton
                    android:id="@+id/rbColorPY"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_color_py_selector"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/rbColorPG"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="33"
                    android:background="@drawable/btn_color_pg_selector"
                    android:button="@null" />
            </RadioGroup>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>